MCE Editor, CSS Tweaks
- added responsive.less and custom sabra.less to bootstrap.less
- added @selectHighlightColor variable
- fixed html5shiv and modernizr enqueue scripts info
- Added TinyMCE buttons for shortcodes
- Filled out Theme Styles template with all Bootstrap elements

ADDED SHORTCODES
- [tabs]
- [row]
- [tab]
- [tooltip]
- [popover]
- [button]
- [accordion]
- [accordion_group]
- [alert]
- [hero]
- [well]
- [checklist] WIP

ADDED FILES
- sabra.less:  custom bootstrap less expansion
- icon images
- sample images for Theme Styles template
- global.js: holds custom js expansion
- my_custom_template.php:  page template container
- single.php: single template container

--- a/css/less/variables.less
+++ b/css/less/variables.less
@@ -41,6 +41,8 @@
 @linkColor:             #08c;
 @linkColorHover:        darken(@linkColor, 15%);
 
+@selectHighlightColor:	#eee;
+
 
 // Typography
 // -------------------------
@@ -151,8 +153,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "@{themeurl}/images/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "@{themeurl}/images/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
