New Shortcodes and Functionality
- Incorporated FB Comments as default commenting system
- Added 4 columns and widgets in the footer
- Added Fancybox and JS callers
- Hooked Nav Bar into WP's menu system
- Added suggestion of User Meta and Disqus Plugins
- Added Widgets to Theme

NEW SHORTCODES
- [image]: utilizes WP_Thumb to spit out an image
- [latest_posts]: spits out latest post widget or several posts

--- a/css/less/sabra.less
+++ b/css/less/sabra.less
@@ -4,3 +4,16 @@
 ::-moz-selection {
 	background: selectHighlightColor; /* Firefox */
 }
+
+iframe {
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+.fb_iframe_widget,
+.fb_iframe_widget span,
+.fb_iframe_widget span iframe {
+	width: 100% !important;
+}
