Update to Version 1.1
- Added WP-Less function to required list
- Added parallel taxonomy functionality

--- a/css/less/bootstrap.less
+++ b/css/less/bootstrap.less
@@ -63,6 +63,9 @@
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
 
+// Wordpress CSS
+@import "wordpress.less";
+
 // Responsive
 @import "responsive.less";
 
