--- a/css/less/sabra_variables.less
+++ b/css/less/sabra_variables.less
@@ -1,5 +1,5 @@
 // Secondary Color to use in Layout
-@primaryColor: #999;
+@primaryColor: #f37533;
 @secondaryColor: #333;
 
 // Client Logo to use on Login page and throughout the site
