--- a/css/less/variables.less
+++ b/css/less/variables.less
@@ -38,7 +38,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             #f37533;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
