--- a/css/less/responsive-767px-max.less
+++ b/css/less/responsive-767px-max.less
@@ -7,19 +7,19 @@
 
   // Padding to set content in a bit
   body {
-    padding-left: 20px;
-    padding-right: 20px;
+    //padding-left: 20px;
+    //padding-right: 20px;
   }
   // Negative indent the now static "fixed" navbar
   .navbar-fixed-top,
   .navbar-fixed-bottom,
   .navbar-static-top {
-    margin-left: -20px;
-    margin-right: -20px;
+    //margin-left: -20px;
+    //margin-right: -20px;
   }
   // Remove padding on container given explicit padding set on body
   .container-fluid {
-    padding: 0;
+    padding: 0 2.5em;
   }
 
   // TYPOGRAPHY
@@ -42,6 +42,8 @@
   // Remove width from containers
   .container {
     width: auto;
+    padding-left: 2.5em;
+    padding-right: 2.5em;
   }
   // Fluid rows
   .row-fluid {
