SABRA BASE WORDPRESS INSTALL UPDATE!!
- Flexslider is dead to me
- Owl Carousel is in!
- Easy Less enabled media queries
- Added plugins BackupBuddy, WPML, Google Analyticator, Maintenance
Mode, WordFence, etc.
- Added One Pager Templates!
-

--- a/css/style.less
+++ b/css/style.less
@@ -13,11 +13,19 @@
 @import "fancybox/jquery.fancybox-thumbs.less";
 @import "fancybox/jquery.fancybox-buttons.less";
 
+// OWL CAROUSEL STYLES
+@import "owl-carousel/owl.carousel.less";
+@import "owl-carousel/owl.themes.less";
+@import "owl-carousel/owl.transitions.less";
+
+// SELECT 2 STYLES
+@import "../js/select2/select2.less";
+
 // BOOTSTRAP TWEAKS
 @import "bootstrap-tweaks.less";
 
-// RETINA CSS
-@import "retina.less";
+// BOOTSTRAP TWEAKS
+@import "onepager.less";
 
 /*****************************************************************************************
 ************************************ GENERAL STYLES **************************************
