--- a/css/less/sabra.less
+++ b/css/less/sabra.less
@@ -133,6 +133,10 @@ header {
 	width: 50px;
 	height: 50px;
 	background-image: url({$themeurl}/images/social-media-sprite.png);
+	
+	@retina {
+		background-image: url({$themeurl}/images/social-media-sprite-retina.png);
+	}
 }
 
 .social-link.facebook {
