--- a/css/less/sabra_variables.less
+++ b/css/less/sabra_variables.less
@@ -1,5 +1,5 @@
 // Secondary Color to use in Layout
-@primaryColor: #f37533;
+@primaryColor: #e64f25;
 @secondaryColor: #333;
 
 // Client Logo to use on Login page and throughout the site
@@ -7,3 +7,10 @@
 
 // Select Highlight Color
 @selectHighlightColor:	#eee;
+
+@retina: ~"(min--moz-device-pixel-ratio: 2),(-o-min-device-pixel-ratio: 2/1),(-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2)";
+
+@desktopLarge: ~"( min-width: 1200px )";
+@desktop: ~"( min-width: 980px ) and ( max-width: 1200px )";
+@tablet: ~"( min-width: 768px ) and ( max-width: 979px )";
+@mobile: ~"( max-width: 767px )";
