Add Sabra Logo to Screenshot

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:     Socrates Connected
+Theme Name:     Sabra Base Theme
 Theme URI:      http://sabradesign.me
-Description:    The official theme of Socrates Connected
+Description:    The official starter template of Sabra Design
 Author:         Sabra Design
 Author URI:     http://sabradesign.me
-Version:        1.1
+Version:        1.2
 */
