--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:     test Theme
+Theme Name:     Sabra Design Wordpress Theme
 Theme URI:      http://sabradesign.me
 Description:    The official starter template of Sabra Design
 Author:         Sabra Design
