--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,7 @@
 *****************************************************************************************/
 
 // BOOTSTRAP CSS
-@import "less/bootstrap.less";
+@import "bootstrap/bootstrap.less";
 
 // FANCYBOX STYLES
 @import "fancybox/jquery.fancybox.less";
@@ -42,12 +42,6 @@
 ************************************ GENERAL STYLES **************************************
 *****************************************************************************************/
 
-// PARAGRAPH STYLES
-@import "paragraph-styles.less";
-
-// UTILITY STYLES
-@import 'utility.less';
-
 // FORM STYLES
 @import 'forms.less';
 
@@ -59,3 +53,18 @@
 
 // HOME
 @import "home.less";
+
+// LOGIN FORM STYLES
+@import "custom_login.less";
+
+// PARAGRAPH STYLES
+@import "paragraph-styles.less";
+
+// SABRA STYLES
+@import "sabra.less";
+
+// SABRA VARIABLE STYLES
+@import "sabra_variables.less";
+
+// UTILITY STYLES
+@import 'utility.less';
