--- a/css/style.less
+++ b/css/style.less
@@ -15,6 +15,9 @@
 @import "owl-carousel/owl.themes.less";
 @import "owl-carousel/owl.transitions.less";
 
+// MMENU STYLES
+@import "jquery.mmenu.all.less";
+
 // SELECT 2 STYLES
 @import "../js/select2/select2.less";
 
