--- a/css/bootstrap/bootstrap.less
+++ b/css/bootstrap/bootstrap.less
@@ -10,7 +10,7 @@
 
 // Core variables and mixins
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "sabra_variables.less";
+@import "../sabra_variables.less";
 @import "mixins.less";
 
 // CSS Reset
@@ -70,4 +70,4 @@
 @import "responsive.less";
 
 // Sabra
-@import "sabra.less";
+@import "../sabra.less";
