--- a/css/style.less
+++ b/css/style.less
@@ -40,6 +40,9 @@
 // PARAGRAPH
 @import "paragraph.less";
 
+// SOCIAL MEDIA
+@import "social_media.less";
+
 
 /*****************************************************************************************
 ************************************ GENERAL STYLES **************************************
@@ -60,8 +63,8 @@
 // LOGIN FORM STYLES
 @import "custom_login.less";
 
-// PARAGRAPH STYLES
-@import "paragraph-styles.less";
+// SECTION STYLES
+@import "section_styles.less";
 
 // UTILITY STYLES
 @import 'utility.less';
