--- a/css/utility.less
+++ b/css/utility.less
@@ -4,6 +4,16 @@
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
+html, body, #main {
+	overflow-x: hidden;
+	
+}
+
+p:empty {
+	display: none;
+	
+}
+
 .section {
 
 	padding: @paddingLarge;
