--- a/css/bootstrap-tweaks.less
+++ b/css/bootstrap-tweaks.less
@@ -1,3 +1,9 @@
+//
+// BootStrap Tweaks 
+// ----------------
+
+
+// All appended and prepended input add-on subclasses text, font-color and border-radius styled
 .input-append .add-on, .input-prepend .add-on {
 
 	height: auto;
@@ -6,6 +12,7 @@
 
 }
 
+// All row-fluid class elements with the class attribute of "span" pushed to the right
 .row-fluid [class*="span"] {
 	margin-left: 2.46%;
 }
