--- a/css/footer.less
+++ b/css/footer.less
@@ -1,8 +1,15 @@
+//
+// Footer Styling
+// -------------
+
+
+// Main-footer element styling
 footer.main-footer {
 	background-color: @grayDark;
 	color: @grayLighter;
 	padding: @paddingMedium;
 	
+	// Sub-footer ID styling (& symbol designates the parent selector)
 	&#sub-footer {
 		border-top: 1px solid @grayLight;
 	}
