--- a/css/header.less
+++ b/css/header.less
@@ -1,24 +1,30 @@
-// NAVBAR TWEAKS
+//
+// Header Navbar Tweaks
+// --------------------
 
+
+// Navbar-inner class styling
 .navbar-inner {
 	background-image: none;
 	background-color: @white;
 }
 
+//Navbar-inner class styling of the fixed-top and static-top class elements
 .navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner {
 	.box-shadow( 0px 0px 0px );
 }
 
+// Header element styling
 header {
 	margin-bottom: 0px;
 }
 
-// MAIN NAV
-
+// Main-nav ID element styling
 #main-nav {
 
 }
 
+// Admin-bar class element styling (of main-nav ID elements)
 body.admin-bar #main-nav {
 	top: 28px;
 }
