--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,9 @@
+//
+// Less Styles Import File
+// -----------------------
+
+
+
 /*****************************************************************************************
 ************************************** BASE STYLES ***************************************
 *****************************************************************************************/
