--- a/css/home.less
+++ b/css/home.less
@@ -1,15 +1,24 @@
+//
+// Home Page Element's Styling
+// --------------------------
+
+
+// Search-header ID element parent styling
 #search-header {
 	background: url(@{stylesheet_directory_uri}/images/cloud-background.png) no-repeat center center;
 	
+	// Search-container subclass elements styling (of search-header ID)
 	.search-container {
 		max-width: 460px;
 		margin: 0 auto;
 	
+		// H2 element styling (of search-container subclass)
 		h2 {
 			text-transform: uppercase;
 			text-shadow: 1px 1px 3px @grayLight;
 		}
 		
+		// Input-append styling (of search-container subclass)
 		.input-append {
 			border: 5px solid rgba(0,0,0,0.1);
 			background-color: rgba(0,0,0,0.1);
@@ -18,6 +27,7 @@
 	}
 }
 
+// Home-content ID element styling
 #home-content {
 	background-image: url(@{stylesheet_directory_uri}/images/CLOUD-BANNER-2.png);
 	background-repeat: none;
