--- a/css/less/sabra.less
+++ b/css/less/sabra.less
@@ -1,3 +1,8 @@
+//
+// SABRA Mixins and Custom Styles
+// ------------------------------
+
+
 // Custom functions
 .transition(@transition) {
   -webkit-transition: @transition;
