--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,12 @@
 ************************************** BASE STYLES ***************************************
 *****************************************************************************************/
 
+// BOURBON CSS
+@import "bourbon/bourbon";
+
+// NEAT CSS
+@import "neat/neat";
+
 // BOOTSTRAP CSS
 @import "bootstrap/bootstrap.less";
 
