--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,5 @@ footer {
   color: red;
   background-color: black;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  padding: 10px;
 }
