--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,25 @@ Version:        1.2
 */
 footer {
   color: red;
-  background-color: black;
+  background-image: -webkit-radial-gradient(50% 50%, circle, #eee 10%, #1e5799 30%, #efefef);
+  background-image: radial-gradient(  circle at 50% 50%, #eee 10%, #1e5799 30%, #efefef);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  padding: 10px;
+}
+footer p {
+  text-align: center;
+  border-color: red green blue;
+}
+a {
+  color: gray;
+  -webkit-transition: color 0.3s ease;
+  -moz-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+a:hover {
+  color: black;
+  -webkit-transform-origin: center right;
+  -moz-transform-origin: center right;
+  -ms-transform-origin: center right;
+  -o-transform-origin: center right;
+  transform-origin: center right;
 }
