--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,8 +14,22 @@ Version:        1.2
 
 footer {
 	color: red;
-	background-color: black;
+	@include radial-gradient(circle at 50% 50%, #eee 10%, #1e5799 30%, #efefef);
 	font-family: $helvetica;
-	padding: 10px;
+	
+	p {
+		text-align: center;
+		@include border-color(red green null blue);
+		
+	}
 				
+}
+
+a {
+  color: gray;
+  @include transition(color .3s ease);
+  &:hover {
+    color: black;
+    		@include transform-origin(center right);
+  }
 }
