2014-11-03_Admin-Dashboard-and-Widgets

--- a/inc/admin_css/partials/_adminmenu.scss
+++ b/inc/admin_css/partials/_adminmenu.scss
@@ -17,6 +17,8 @@
 		background-color: $clientLogoBackground;
 		background-image: $clientLogo;
 		border: 1px solid #666;
+		border-color: $clientLogoBorderColor;
+		box-shadow: 1px 1px 10px #000;
 
 ;
 	}
